<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome_message"
            android:textSize="50sp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_back_button"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:id="@+id/cbButton"
            android:textColor="@color/button_text_colour"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_information"
            android:layout_gravity="center"
            android:textColor="@color/button_text_colour"
            android:id="@+id/moreInfo"/>
    </LinearLayout>

</ScrollView>